@@ -24,20 +24,22 @@ public class DeleteKitCmd implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String s, @NotNull String[] args) {
 
-        if (!(sender instanceof Player player)) {
+        if (!(sender instanceof Player)) {
             sender.sendMessage("Only a player can run this command.");
             return true;
         }
 
+        Player player = (Player) sender;
+
         if (args.length >= 1) {
             String kitName = args[0];
             if (!KitManager.checkKit(kitName, plugin)) {
-                player.sendMessage(ChatColor.RED + "%s is not a valid kit.".formatted(kitName));
+                player.sendMessage(ChatColor.RED + String.format("%s is not a valid kit.", kitName));
                 return false;
             }
             KitManager.removeKit(kitName, plugin);
             plugin.saveKitConfig();
-            player.sendMessage(ChatColor.GREEN + "Successfully deleted a kit called '%s'".formatted(kitName));
+            player.sendMessage(ChatColor.GREEN + String.format("Successfully deleted a kit called '%s'", kitName));
 
         } else {
             player.sendMessage(ChatColor.YELLOW + "/deletekit <kit>");
